Fix mobile view blog list missing margin

--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -71,6 +71,7 @@
     .post-title {
       line-height: 1;
     }
+    margin-right:10px;
   }
 }
 
